--- a/packages/samples/webapp/index.html
+++ b/packages/samples/webapp/index.html
@@ -7,7 +7,7 @@
       id="sap-ui-bootstrap"
       src="resources/sap-ui-core.js"
       data-sap-ui-resourceroots='{
-	            "ui5.typescript.helloworld": "./"
+	            "dev.carlosorozco.ui5Extra.samples": "./"
 	        }'
       data-sap-ui-theme="sap_horizon"
       data-sap-ui-compatVersion="edge"
@@ -21,9 +21,9 @@
   <body class="sapUiBody">
     <div
       data-sap-ui-component
-      data-name="ui5.typescript.helloworld"
+      data-name="dev.carlosorozco.ui5Extra.samples"
       data-id="container"
-      data-settings='{"id" : "ui5.typescript.helloworld"}'
+      data-settings='{"id" : "dev.carlosorozco.ui5Extra.samples"}'
     ></div>
   </body>
 </html>
