--- a/packages/samples/webapp/index.html
+++ b/packages/samples/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>UI5 TypeScript Hello World App</title>
+    <title>ui5-extra Samples | Carlos Orozco</title>
     <script
       id="sap-ui-bootstrap"
       src="resources/sap-ui-core.js"
